# RoboticLibrary

./: CMakeLists.txt  README.md  README.txt  SUBMISSION_CHECKLIST.txt  package.xml
docs/: DUPLICATE_CHECK.txt  GITHUB_UPLOAD_GUIDE.txt  WEEK10_DEMO_CHECKLIST.txt  WEEK9_WEEK10_NOTE.txt
launch/: multi_point_navigation.launch  qr_task.launch
maps/: library_final_fixed_map.yaml
scripts/: install_qr_dependencies.sh  multi_point_ui.py
tiago_library_nav/: CMakeLists.txt  package.xml
tiago_library_nav/maps/: library_final_fixed_map.yaml
tiago_library_nav/scripts/: book_finder_node.py  fix_pal_nav_config.sh  qr_scanner.py
tiago_library_nav/task_models/qr_bookshelf_1/: model.config  model.sdf
tiago_library_nav/task_models/qr_bookshelf_1/materials/scripts/: qr_bookshelf_1.material
tiago_library_nav/task_models/qr_bookshelf_3/: model.config
tiago_library_nav/task_models/qr_bookshelf_3/materials/scripts/: qr_bookshelf_3.material
tiago_library_nav/task_models/qr_bookshelf_4/: model.sdf
tiago_library_nav/task_models/qr_bookshelf_6/: model.config  model.sdf
tiago_library_nav/task_models/qr_bookshelf_7/: model.config
tiago_library_nav/task_models/qr_bookshelf_8/: model.config  model.sdf
tiago_library_nav/task_models/qr_bookshelf_8/materials/scripts/: qr_bookshelf_8.material
tiago_library_nav/task_models/qr_bookshelf_right/: model.config  model.sdf
tiago_library_nav/task_models/qr_bookshelf_right/materials/scripts/: qr.material
tiago_library_nav/worlds/: project_library_week10_qr.world  project_library_week10_qr_before_remove_tiago.world
(+15 files in other folders)
